<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85"
        android:id="@+id/galleryImage"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/galleryAdresse"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/adresse"
        android:textSize="25sp"
        android:textColor="#000"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="30">

        <TextView
            android:id="@+id/galleryPreisTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/preis"
            android:textColor="#000"
            android:textSize="15sp"

            />

        <TextView
            android:id="@+id/galleryPreis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/preisHint"
            android:textColor="#000"
            android:textSize="15sp"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="30">

        <TextView
            android:id="@+id/galleryAnzahlZimmerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/anzahlZimmer"
            android:textColor="#000"
            android:textSize="15sp"

            />

        <TextView
            android:id="@+id/galleryAnzahlZimmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/anzahlZimmerHint"
            android:textColor="#000"
            android:textSize="15sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="30">

        <TextView
            android:id="@+id/galleryAngebotTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/angebot"
            android:textColor="#000"
            android:textSize="15sp"

            />

        <TextView
            android:id="@+id/galleryAngebot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/angebot"
            android:textColor="#000"
            android:textSize="15sp"

            />
    </LinearLayout>


    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="30">

    <TextView
        android:id="@+id/galleryFlaecheTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/Fläche"
        android:textColor="#000"
        android:textSize="15sp"

        />

    <TextView
        android:id="@+id/galleryFlaeche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/FlächeHint"
        android:textColor="#000"
        android:textSize="15sp"

        />
</LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="30">

        <TextView
            android:id="@+id/galleryMaklerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MaklerProvision"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:textSize="15sp"

            />

        <TextView
            android:id="@+id/galleryMakler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MaklerProvision"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:textSize="15sp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/editGalleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/backgroundColor"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/deleteGalleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/backgroundColor"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </LinearLayout>




</LinearLayout>