<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="100"
    android:id="@+id/item_layout_makler">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="181dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/anzeigeImage" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="30">

        <TextView
            android:id="@+id/adresse"
            android:layout_width="154dp"
            android:layout_height="45dp"
            android:text="@string/adresse"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="30">
                <TextView
                    android:id="@+id/preis_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preis"
                    android:textSize="12sp"
                    android:textStyle="bold"

                   />

                <TextView
                    android:id="@+id/preis_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="30">
                <TextView
                    android:id="@+id/angebot_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angebot"
                    android:textSize="12sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/angebot_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="30">
        <TextView
            android:id="@+id/anzahlZimmer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anzahlZimmer"
            android:textSize="12sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/anzahlZimmer_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="30">

        <TextView
            android:id="@+id/flaeche_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FlächeOutput"
            android:textSize="12sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/flaeche_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="30">

            <TextView
                android:id="@+id/maklerP_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MaklerProvision"
                android:textSize="12sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/maklerP_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />

        </LinearLayout>
    </LinearLayout>





</LinearLayout>